Refactor summary list error and missing messages, and show placement locations

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -17,9 +17,11 @@ $git-brand-colour: #159964;
 @import "components/course-tabs";
 @import "components/description-list";
 @import "components/header";
+@import "components/inset-text";
 @import "components/link";
 @import "components/list";
 @import "components/map";
+@import "components/overrides";
 @import "components/phase-tag";
 @import "components/summary-list";
 @import "components/table";
