--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -618,7 +618,7 @@
   {% endset %}
 
   {# We've hidden the History tab as it wasn't built in production #}
-  <div class="course-tabs">
+  <div class="app-tabs app-tabs--course">
     {{ govukTabs({
       items: [{
         label: "Description<br /><span style=\"pointer-events: none\" class=\"govuk-body-s govuk-!-font-weight-regular\">Content, fees and eligibility</span>" | safe,
