--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -37,25 +37,62 @@
   {% macro locationsTable(locations, caption) %}
     {% set type = "school" if locations == schoolLocations else "centre" %}
     {% set heading = "Placement schools" if type == "school" else "Training centres" %}
+    {% set caption = "Schools" if type == "school" else "Training centres" %}
     {% set item = "placement school" if type == "school" else "training centre" %}
-    <hr class="govuk-section-break govuk-section-break--l">
+
+    {% if type == "school" and data["placements-policy"] %}
+      <h2 class="govuk-heading-l">School placement settings</h2>
+      {{ govukSummaryList({
+        classes: "govuk-!-margin-bottom-8 govuk-!-width-two-thirds",
+        rows: [{
+          key: {
+            text: "Placement schools are assigned to each course"
+          },
+          value: {
+            text: "Yes" if data["placements-display"] == "list" else "No"
+          },
+          actions: {
+            items: [{
+              href: "/locations/placements-display?referrer=/locations#school",
+              text: "Change",
+              visuallyHiddenText: "how placements are displayed"
+            }]
+          }
+        }, {
+          key: {
+            text: "Candidates select a school when they apply"
+          },
+          value: {
+            text: "Yes" if data["placements-policy"] == "hosted" else "No"
+          },
+          actions: {
+            items: [{
+              href: "/locations/placements-policy?referrer=/locations#school",
+              text: "Change",
+              visuallyHiddenText: "placements policy"
+            }]
+          }
+        }]
+      }) }}
+    {% endif %}
+
     {% if locations.length > 0 %}
-      <section class="app-table-container" tabindex="0" aria-labelledby="{{ type }}-caption">
-        <table class="govuk-table">
-          <caption class="govuk-table__caption govuk-table__caption--m" id="{{ type }}-caption">{{ heading }}</caption>
-          <thead class="govuk-table__head">
+      <table class="govuk-table">
+        <caption class="govuk-table__caption govuk-table__caption--l" id="{{ type }}-caption">{{ caption }}</caption>
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" width="40%" scope="col">Name (URN)</th>
+            <th class="govuk-table__header" width="60%" scope="col">Address</th>
+            <th class="govuk-table__header" scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          {% for location in locations %}
             <tr class="govuk-table__row">
-              <th class="govuk-table__header" width="40%" scope="col">Name</th>
-              <th class="govuk-table__header" width="10%" scope="col">URN</th>
-              <th class="govuk-table__header" width="60%" scope="col">Address</th>
-              <th class="govuk-table__header" scope="col">Actions</th>
-            </tr>
-          </thead>
-          <tbody class="govuk-table__body">
-            {% for location in locations %}
-            <tr class="govuk-table__row">
-              <th class="govuk-table__header" scope="row">{{ location.name }}</th>
-              <td class="govuk-table__cell">{{ location.urn }}</td>
+              <th class="govuk-table__header" scope="row">
+                {{ location.name }}
+                <span class="govuk-!-font-weight-regular app-!-colour-muted">({{ location.urn }})</span>
+              </th>
               <td class="govuk-table__cell">
                 {{- location["address-line1"] + ", " if location["address-line1"] -}}
                 {{- location["address-line2"] + ", " if location["address-line2"] -}}
@@ -64,14 +101,13 @@
                 {{- location["postal-code"] if location["postal-code"] -}}
               </td>
               <td class="govuk-table__cell app-govuk-table__cell--actions">
-                <a class="govuk-link govuk-link--no-visited-state" href="/location/{{ location.code or location.urn }}">Edit</a>
+                <a class="govuk-link govuk-link--no-visited-state" href="/location/{{ location.code or location.urn }}?referrer=/locations#{{ type }}">Edit</a>
                 <a class="govuk-link app-link--destructive" href="#">Delete</a>
               </td>
             </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </section>
+          {% endfor %}
+        </tbody>
+      </table>
 
       <div class="govuk-button-group">
         {{ govukButton({
@@ -85,20 +121,20 @@
       </div>
     {% else %}
       <div class="govuk-!-width-two-thirds">
-        <h2 class="govuk-heading-m">{{ heading }}</h2>
+        <h2 class="govuk-heading-l">{{ heading }}</h2>
         {% if type == "school" %}
-          <p class="govuk-body">A placement school is a location where a candidate may be placed during their training.</p>
-          <p class="govuk-body">Before adding any schools, you can decide:</p>
+          <p class="govuk-body">A placement school is a location where candidates may be placed during their training.</p>
+          <p class="govuk-body">Before adding placement schools, you can decide:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>whether to show individual addresses or only the areas schools are located</li>
             <li>if candidates can select a school when making an application</li>
           </ul>
           {{ govukButton({
             text: "Set up placement schools",
-            href: "#"
+            href: "/locations/placements-display"
           }) }}
         {% else %}
-          <p class="govuk-body">A training centre is a location where academic training takes place.</p>
+          <p class="govuk-body">A training centre is a location where academic or ‘centre-based’ training takes place.</p>
           {{ govukButton({
             text: "Add a " + item,
             href: "/location/start?type=" + type
@@ -108,7 +144,20 @@
     {% endif %}
   {% endmacro %}
 
-  {{ locationsTable(schoolLocations) }}
-
-  {{ locationsTable(centerLocations) }}
+  {{ govukTabs({
+    classes: "app-tabs app-tabs--locations govuk-!-margin-top-8",
+    items: [{
+      label: "Placement schools",
+      id: "school",
+      panel: {
+        html: locationsTable(schoolLocations)
+      }
+    }, {
+      label: "Training centres",
+      id: "centre",
+      panel: {
+        html: locationsTable(centerLocations)
+      }
+    }]
+  }) }}
 {% endblock %}
