--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -14,7 +14,6 @@ $git-brand-colour: #159964;
 @import "components/advice";
 @import "components/application-card";
 @import "components/copy-content";
-@import "components/course-tabs";
 @import "components/description-list";
 @import "components/header";
 @import "components/inset-text";
@@ -26,6 +25,7 @@ $git-brand-colour: #159964;
 @import "components/summary-list";
 @import "components/table";
 @import "components/table-container";
+@import "components/tabs";
 @import "components/timeline";
 
 .status-box {
