--- a/app/views/locations/placements-policy.html
+++ b/app/views/locations/placements-policy.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Should candidates choose a school when they apply?" %}
-{% set backLink = referrer or "/locations#school" %}
+{% set backLink = referrer %}
 
 {% block content %}
   <form action="{{ backLink }}" method="post" class="govuk-grid-row">
