--- a/app/views/new/placement-locations.html
+++ b/app/views/new/placement-locations.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
-{% set title = "Choose the locations candidates can apply to" %}
+{% set title = "In which schools can candidates be placed?" %}
 {% set backLink = paths.back %}
 
 {% block content %}
   <form action="{{ paths.next }}" method="post" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      {% if items.length > 0 %}
+      {% if schoolLocations.length > 0 %}
         {{ govukCheckboxes({
           idPrefix: code + "-locations",
           name: code + "-locations",
@@ -36,12 +36,12 @@
       {% else %}
         <h1 class="govuk-heading-xl">{{ title }}</h1>
         <div class="govuk-inset-text">
-          <h2 class="govuk-heading-m">No placement schools</h2>
-          <p class="govuk-body">Add or upload placement schools before selecting placement school locations for this course.</p>
+          <h2 class="govuk-heading-m">You have not added any placement schools</h2>
+          <p class="govuk-body">Placement schools are locations where candidates may be placed during their training.</p>
 
           {{ govukButton({
-            href: "/locations",
-            text: "Add or upload locations"
+            text: "Add a placement school",
+            href: "/location/start?type=school&referrer=/edit/" + code + "/placement-locations"
           }) }}
         </div>
       {% endif %}
